--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A portfolio for Matthew Zhang, computer science student at Princeton University and prospective software engineer." />
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="style.css" type="text/css"/>
